sidebar scrollbar width fixed

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,9 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-
-
 }
+
+* {
+  scrollbar-width: thin;
+}
+
